Reduce code duplication in NoSQLProjectTest